--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -55,16 +55,13 @@
     <script type="text/javascript">
         (function() {
             // https://dashboard.emailjs.com/admin/account
-            emailjs.init('gPCOXopOMiJs9k9L6');console.log("Wow")
+            emailjs.init('gPCOXopOMiJs9k9L6');
         })();
     </script>
     <script type="text/javascript">
-        console.log("Wow")
         window.onload = function() {
             document.getElementById('contact-form').addEventListener('submit', function(event) {
                 event.preventDefault();
-                console.log(this)
-
                 // these IDs from the previous steps
                 emailjs.sendForm('forz_email', 'contact_template', this)
                     .then(function() {
